--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap" rel="stylesheet">  
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
@@ -21,9 +25,9 @@
 
         <div class="intro">
             <h1>Rock Paper Scissors</h1>
-            <button>let's player</button>
+            <button>let's play</button>
         </div>
-
+    <div class="match fadeOut">
         <div class="match">
             <h1 class="winner">choose an option</h1>
             <div class="hands">
